frontend/tests/errors/ER-002/undefined_type/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Name resolution failures are reported as compile-time errors | Name resolution failure: undefined type


&^main() -> #i32 {
    value:#MyType = 5;
    value;
}
